# STM32_CMake_Template

./: CMakeLists.txt  README.md  openocd.cfg
cmake/: stm32-toolchain.cmake
linker/: STM32F103VETx_FLASH.ld
src/: main.c  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c
